<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="120dp">
    
    <CheckBox
        android:id="@+id/item_coupon_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:padding="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/item_coupon_check_box"
        android:orientation="vertical"
        android:padding="4dp">

        <TextView
            android:id="@+id/item_coupon_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/coupon_no"/>
        <TextView
            android:id="@+id/item_coupon_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/coupon_money"/>
        <TextView
            android:id="@+id/item_coupon_valid_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/valid_time"/>
    </LinearLayout>
    
</RelativeLayout>