<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_page"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/darkOrange"
        android:layout_gravity="center"
        android:layout_height="40dp">
        <ImageView
            android:id="@+id/back_home"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@mipmap/back"/>
        <TextView
            android:id="@+id/home_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/lightYellow"
            android:text="@string/home_frame_text"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:textSize="20dp"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/create_button"
            style="@style/StrongBeatBoxButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_button" />
        <Button
            android:id="@+id/change_button"
            style="@style/StrongBeatBoxButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change_button" />
        <Button
            android:id="@+id/query_button"
            style="@style/StrongBeatBoxButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/query_button" />
    </LinearLayout>


    <android.support.design.widget.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkOrange"
        android:orientation="vertical">
        <Button
            android:id="@+id/get_once_btn"
            android:text="@string/coupon_get_once"
            android:layout_width="wrap_content"
            android:background="@color/darkOrange"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>