<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/darkOrange"
    android:weightSum="1">

    <TextView
        android:id="@+id/inputText"
        android:layout_width="wrap_content"
        android:padding="50dp"
        android:text="@string/question_text"
        android:layout_height="40dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_button" />

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button"/>

        </LinearLayout>



    </LinearLayout>

    <TextView
        android:id="@+id/returnInfo"
        android:layout_width="wrap_content"
        android:padding="24dp"
        android:text="@string/question_text"
        android:layout_height="wrap_content" />

</LinearLayout>
